nginx/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-simple
  labels:
    app: nginx-simple
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-simple
  template:
    metadata:
      labels:
        app: nginx-simple
    spec:
      containers:
        - name: nginx-simple
          image: bitnami/nginx:1.12.2 # 1.12.2
          ports:
            - containerPort: 8080
