nginx/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-simple-service
spec:
  selector:
    app: nginx-simple
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
